[project]
name = "download-papers-with-their-title"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.32.0",
    "selenium>=4.27.0",
    "setuptools>=75.8.0",
    "undetected-chromedriver>=3.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]
